--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.0.0",
     "react-swipe-card": "^0.1.4",
     "react-swipeable-cards": "^1.0.6",
+    "react-swipy": "0.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
